[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/exo.regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UI/MainMenu/Fonts/MenuOptionButton.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/MainMenu/Buttons/MenuPopUp.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/MainMenu/Buttons/MenuCheckButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/MainMenu/Buttons/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/UI/video_settings.gd" type="Script" id=6]



[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[node name="VideoSettings" type="Control"]
anchor_left = -0.00027593
anchor_right = 0.999724
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 650.0
margin_top = 320.0
margin_right = -650.0
margin_bottom = -120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleStuff" type="HBoxContainer" parent="Menu"]
margin_right = 619.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Labels" type="VBoxContainer" parent="Menu/MiddleStuff"]
margin_right = 307.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 75

[node name="Resolution" type="Label" parent="Menu/MiddleStuff/Labels"]
margin_right = 307.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "Resolution:"
align = 2

[node name="Fullscreen" type="Label" parent="Menu/MiddleStuff/Labels"]
margin_top = 118.0
margin_right = 307.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen:"
align = 2

[node name="Borderless" type="Label" parent="Menu/MiddleStuff/Labels"]
margin_top = 236.0
margin_right = 307.0
margin_bottom = 279.0
custom_fonts/font = ExtResource( 2 )
text = "Borderless:"
align = 2

[node name="VSync" type="Label" parent="Menu/MiddleStuff/Labels"]
margin_top = 354.0
margin_right = 307.0
margin_bottom = 397.0
custom_fonts/font = ExtResource( 2 )
text = "VSync:"
align = 2

[node name="Values" type="VBoxContainer" parent="Menu/MiddleStuff"]
margin_left = 311.0
margin_right = 619.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 75
script = ExtResource( 6 )

[node name="ResolutionPopUp" parent="Menu/MiddleStuff/Values" instance=ExtResource( 3 )]
margin_right = 308.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "1920x1080"
align = 0

[node name="FullscreenButton" parent="Menu/MiddleStuff/Values" instance=ExtResource( 4 )]
margin_top = 124.0
margin_right = 76.0
margin_bottom = 164.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = ""

[node name="BorderlessButton" parent="Menu/MiddleStuff/Values" instance=ExtResource( 4 )]
margin_top = 239.0
margin_right = 76.0
margin_bottom = 279.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = ""

[node name="VSyncButton" parent="Menu/MiddleStuff/Values" instance=ExtResource( 4 )]
margin_top = 354.0
margin_right = 76.0
margin_bottom = 394.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
pressed = true
text = ""

[node name="Back" parent="Menu" instance=ExtResource( 5 )]
margin_top = 574.0
margin_right = 619.0
margin_bottom = 640.0
text = "Back"
scene = "res://Scenes/UI/MainMenu/SettingsScreen.tscn"

[node name="Title" type="Label" parent="."]
margin_left = 180.0
margin_top = 120.0
margin_right = 1740.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.270588 )
custom_constants/shadow_offset_y = 5
text = "Video Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
